# laker

./: .gitignore  FAQ  FLOW.txt  LICENSE  MANIFEST.in  NOTES.txt  README.md  TREE.txt  flow.txt  future_enhancements.txt  linkedin  linkedin.txt  load_table_log.yaml  pyproject.toml  requirements.txt  tree.txt
.github/workflows/: workflow.yaml
archive/: main.py  steps_audit.py  steps_differences.py  steps_loader.py  validate.py  yaml.py
config/: example.yaml
demos/: example.yaml
docs/: FAQ  FUTURE_ENHANCEMENTS  audit.md  differences.txt  snapshot.txt  tree.txt
examples/: audit.md  differences.txt  differences_return.txt  snapshot.txt  snapshot_minimum.txt
src/: dev_testing.ipynb  test_layker.ipynb
src / / layker /: metadata.py
src/laker/: load_table_log.py  main.py  table_loader.py  table_sanitizer.py  table_validator.py
src/layker/: __init__.py  audit.py  cli.py  color.py  ddl.py  differences.py  differences_logger.py  dry_run.py  introspector.py  loader.py  loader_logger.py  logger.py  main.py  metadata.py  output.py  sanitizer.py  snapshot.py  snapshot_table.py  snapshot_yaml.py  table.py  table_ddl_config.py  table_differences.py  table_differences_logger.py  table_introspector.py  validator.py  yaml.py  yaml_reader.py  yaml_table_dump.py
src/layker/audit/: INFO  audit.py  controller.py  layker_audit.yaml  layker_audit_log.yaml  logger.py
src/layker/resources/: audit.yaml  config_driven_table_example.yaml  example.yaml  layker_audit.yaml  layker_test.yaml  template_ddl.yaml  test.yaml
src/layker/schema/: example.yaml  load_table_log.yaml
src/layker/steps/: audit.py  differences.py  evolution.py  loader.py  snapshot.py  validate.py  yaml_table_dump.py
src/layker/utils/: helpers.py  paths.py  spark.py  (+5 more)
src/logs/: example_comparison.yaml
(+4 files in other folders)
